--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,11 @@
 version: 1.0.{build}
-os: Visual Studio 2015
+image: Visual Studio 2017
+init:
+- git config --global core.autocrlf true
 configuration:
 - Release
-environment:
-  DNX_FEED: https://www.nuget.org/api/v2
-install:
-- cmd: >-
-    set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
+before_build:
+- nuget restore
 build:
   parallel: true
   verbosity: minimal
