--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -23,7 +23,7 @@
     <file src="CommonMark\bin\$configuration$\net45\CommonMark.*" target="lib\net45\" />
     <file src="CommonMark\bin\$configuration$\portable-net4+sl5+win+wpa+wp8\CommonMark.*" target="lib\portable-net40+sl50+wp80+win+wpa81+MonoAndroid10+MonoTouch10\" />
     <file src="CommonMark\bin\$configuration$\portable-net45+win+wpa+wp8\CommonMark.*" target="lib\portable-net45+wp80+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\" />
-    <file src="CommonMark\bin\$configuration$\portable-net45+win+wpa+wp8\CommonMark.*" target="lib\netstandard1.0\" />
+    <file src="CommonMark\bin\$configuration$\netstandard1.0\CommonMark.*" target="lib\netstandard1.0\" />
     <file src="CommonMark.Console\bin\$configuration$\net45\CommonMark.Console.exe" target="tools\cmark.exe" />
     <file src="CommonMark.Console\App.nuget.config" target="tools\cmark.exe.config" />
   </files>
