--- a/CommonMark.Console/CommonMark.Console.csproj
+++ b/CommonMark.Console/CommonMark.Console.csproj
@@ -15,6 +15,10 @@
 
     <Version>1.0.0.0</Version>
     <FileVersion>1.0.0.0</FileVersion>
+
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <NuspecFile>..\CommonMark.NET.Console.nuspec</NuspecFile>
+    <NuspecProperties>configuration=$(Configuration)</NuspecProperties>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,6 +41,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonMark\CommonMark.Base.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\CommonMark.NET.Console.nuspec">
+      <Link>Properties\CommonMark.NET.Console.nuspec</Link>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
