--- a/CommonMark.NET.Console.nuspec
+++ b/CommonMark.NET.Console.nuspec
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
-    <id>CommonMark.NET</id>
+    <id>CommonMark.NET.Console</id>
     <version>0.15.1</version>
-    <title>CommonMark.NET</title>
+    <title>CommonMark.NET.Console</title>
     <authors>Kārlis Gaņģis</authors>
     <licenseUrl>https://raw.githubusercontent.com/Knagis/CommonMark.NET/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/Knagis/CommonMark.NET/</projectUrl>
@@ -17,12 +17,8 @@
   </metadata>
   <files>
     <file src="LICENSE.md" target="\" />
-    <file src="CommonMark\bin\$configuration$\net20\CommonMark.*" target="lib\net20\" />
-    <file src="CommonMark\bin\$configuration$\net35-client\CommonMark.*" target="lib\net35-client\" />
-    <file src="CommonMark\bin\$configuration$\net40-client\CommonMark.*" target="lib\net40-client\" />
-    <file src="CommonMark\bin\$configuration$\net45\CommonMark.*" target="lib\net45\" />
-    <file src="CommonMark\bin\$configuration$\portable-net4+sl5+win+wpa+wp8\CommonMark.*" target="lib\portable-net40+sl50+wp80+win+wpa81+MonoAndroid10+MonoTouch10\" />
-    <file src="CommonMark\bin\$configuration$\portable-net45+win+wpa+wp8\CommonMark.*" target="lib\portable-net45+wp80+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\" />
-    <file src="CommonMark\bin\$configuration$\netstandard1.0\CommonMark.*" target="lib\netstandard1.0\" />
+    <file src="CommonMark.Console\bin\$configuration$\net45\CommonMark.Console.exe" target="tools\cmark.exe" />
+    <file src="CommonMark.Console\bin\$configuration$\net45\CommonMark.Console.exe.config" target="tools\cmark.exe.config" />
+    <file src="CommonMark\bin\$configuration$\net45\CommonMark.*" target="tools\" />
   </files>
 </package>
