--- a/CommonMark.Console/CommonMark.Console.csproj
+++ b/CommonMark.Console/CommonMark.Console.csproj
@@ -16,7 +16,7 @@
     <Version>1.0.0.0</Version>
     <FileVersion>1.0.0.0</FileVersion>
 
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NuspecFile>..\CommonMark.NET.Console.nuspec</NuspecFile>
     <NuspecProperties>configuration=$(Configuration)</NuspecProperties>
   </PropertyGroup>
