--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -22,7 +22,7 @@
     <Version>0.1.0.0</Version>
     <FileVersion>0.1.0.0</FileVersion>
 
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NuspecFile>..\CommonMark.NET.nuspec</NuspecFile>
     <NuspecProperties>configuration=$(Configuration)</NuspecProperties>
   </PropertyGroup>
