--- a/CommonMark.NET.Console.nuspec
+++ b/CommonMark.NET.Console.nuspec
@@ -17,8 +17,8 @@
   </metadata>
   <files>
     <file src="LICENSE.md" target="\" />
-    <file src="CommonMark.Console\bin\$configuration$\net45\CommonMark.Console.exe" target="tools\cmark.exe" />
-    <file src="CommonMark.Console\bin\$configuration$\net45\CommonMark.Console.exe.config" target="tools\cmark.exe.config" />
+    <file src="CommonMark.Console\bin\$configuration$\net45\cmark.exe" target="tools\" />
+    <file src="CommonMark.Console\bin\$configuration$\net45\cmark.exe.config" target="tools\" />
     <file src="CommonMark\bin\$configuration$\net45\CommonMark.*" target="tools\" />
   </files>
 </package>
