--- a/CommonMark.Console/CommonMark.Console.csproj
+++ b/CommonMark.Console/CommonMark.Console.csproj
@@ -29,6 +29,8 @@
     <IsTool>true</IsTool>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
   </PropertyGroup>
 
   <ItemGroup>
@@ -66,6 +68,12 @@
     <ItemGroup>
       <BuildOutputInPackage Include="$(OutputPath)CommonMark.dll" />
       <BuildOutputInPackage Include="$(OutputPath)CommonMark.xml" />
+    </ItemGroup>
+  </Target>
+
+  <Target Name="_GetAdditionalPackSymbolFiles" BeforeTargets="_GetDebugSymbolsWithTfm">
+    <ItemGroup>
+      <_TargetPathsToSymbolsWithTfm Include="$(OutputPath)CommonMark.pdb" TargetFramework="$(TargetFramework)" />
     </ItemGroup>
   </Target>
 
