--- a/CommonMark.Console/CommonMark.Console.csproj
+++ b/CommonMark.Console/CommonMark.Console.csproj
@@ -15,9 +15,6 @@
     <Description>https://github.com/Knagis/CommonMark.NET</Description>
     <Copyright>Copyright © Kārlis Gaņģis 2014</Copyright>
 
-    <Version>1.0.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NuspecFile>..\CommonMark.NET.Console.nuspec</NuspecFile>
     <NuspecProperties>configuration=$(Configuration)</NuspecProperties>
@@ -42,13 +39,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommonMark\CommonMark.Base.csproj" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="2.2.13" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\CommonMark.NET.Console.nuspec">
-      <Link>Properties\CommonMark.NET.Console.nuspec</Link>
-    </EmbeddedResource>
+    <ProjectReference Include="..\CommonMark\CommonMark.Base.csproj" />
   </ItemGroup>
 
 </Project>
